--- a/top_header/top_header.html
+++ b/top_header/top_header.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/gg/Nav bar/Navbar.css" />
+    <link rel="stylesheet" href="/Nav bar/Navbar.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="top_header.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <header>
+      <div id="header-icon">
+          <div id="front-header">
+              <p>Follow us on :
+              <i class="fa fa-linkedin"></i>&nbsp;
+              <i class="fa fa-youtube-play"></i>&nbsp;
+              <i class="fa fa-instagram"></i>&nbsp;
+              <i class="fa fa-facebook-f"></i>
+              </p>
+          </div>
+          <div id="end-header">
+              <p>
+              <i class="fa fa-phone"></i>
+              04712779100 | 04712779101 &nbsp;
+              <i class="fa fa-envelope"></i>
+              gghospitalphkpl@gmail.com | edoffice@gg-hospital.com
+              </p>
+          </div>
+      </div>
+  </header>
     <div class="header-container">
       <div>
-        <img class="logo" src="/gg/Nav bar/image 24.png" alt="GG_LOGO" />
+        <img class="logo" src="/Nav bar/image 24.png" alt="GG_LOGO" />
       </div>
       <div class="topnav">
         <a href="#home">About Us</a>
@@ -21,54 +45,231 @@
         <a href="#contactgg">Contact Us</a>
       </div>
     </div>
-    <div class="doc">
-      <div class="text">
-        <h1>Love & Care to<br />Humanity</h1>
-        <p>Fastest-Growing Multi Speciality Hospital<br />in South Kerala.</p>
-        <button class="click">Book An Appointment</button>
-        <img class="yt_header" src="yt_icon.png" alt="docpic" />
+    <div class="overflow">
+      <div class="doc">
+        <div class="text">
+          <h1>Love & Care to<br />Humanity</h1>
+          <p>Fastest-Growing Multi Speciality Hospital<br />in South Kerala.</p>
+          <button class="click">Book An Appointment</button>
+          <img class="yt_header" src="yt_icon.png" alt="docpic" />
+        </div>
+        <img class="img" src="doct_pic.png" alt="docpic" width="100%" />
       </div>
-      <img class="img" src="doct_pic.png" alt="docpic" width="100%" />
+      <div class="form">
+        <h3>Book an appointment</h3>
+        <div class="form-row1">
+          <input
+            class="box"
+            type="text"
+            name="Full name"
+            placeholder="Full name"
+          />
+          <input
+            class="box"
+            type="number"
+            name="Phone number"
+            placeholder="Phone number"
+          />
+          <input
+            class="box"
+            type="date"
+            name="Select Date"
+            placeholder="Select Date"
+          />
+        </div>
+        <div class="form-row2">
+          <select name="Department" class="box">
+            <option value="" disabled selected hidden>Department</option>
+            <option value="ENT">ENT</option>
+            <option value="General Medicine">Dermatology</option>
+            <option value="Dermatology">Dermatology</option>
+            <option value="Dentistry">Dentistry</option>
+          </select>
+          <select name="Doctor" class="box">
+            <option value="" disabled selected hidden>Doctors</option>
+            <option value="ENT">ENT</option>
+            <option value="General Medicine">Dermatology</option>
+            <option value="Dermatology">Dermatology</option>
+            <option value="Dentistry">Dentistry</option>
+          </select>
+          <button class="book-button">Book an appointment</button>
+        </div>
+      </div>
     </div>
-    <div class="form">
-      <h3>Book an appointment</h3>
-      <div class="form-row1">
-        <input
-          class="box"
-          type="text"
-          name="Full name"
-          placeholder="Full name"
-        />
-        <input
-          class="box"
-          type="number"
-          name="Phone number"
-          placeholder="Phone number"
-        />
-        <input
-          class="box"
-          type="date"
-          name="Select Date"
-          placeholder="Select Date"
-        />
+<div class="department">
+  <h1>Our<br>Departments</h1>
+</div>
+
+<div class="department_inside">
+  <div class="dep_images">
+    <img src="/top_header/dep_img1.png" alt="doc1" width="100%">
+    <img src="/top_header/dep_img2.png" alt="doc2" width="100%">
+    <img src="/top_header/dep_img3.png" alt="doc3" width="100%">
+  </div>
+
+  <div class="dept_text">
+    <div class="text1">
+      <h3>Hepatobiliary Surgery</h3>
+      <p>The Hepatobiliary and Transplantology Unit of<br>GG Hospital offers a comprehensive...</p><br><span>Read more</span>
+    </div>
+    <div class="text2">
+    <h3>Medical Oncology</h3>
+    <p>GG Hospital is the best affordable hospital in<br>South Kerala which is NABH accredited hospital...</p><br><span>Read more</span>
+    </div>
+    <div class="text3">
+      <h3>ENT,Head & Neck Skull Surgery</h3>
+      <p>The ENT department in GG hospital provides a<br>wide range of treatment modalities..</p><br><span>Read more</span>
+    </div>
+  </div>
+
+</div>
+<div class="why">
+  <div class="why_one">
+    <img src="/top_header/why_1.png" alt="doc1" width="75%">
+  </div>
+  <div class="why_two">
+    <h2>Why GG Hospital</h2>
+    <img src="/top_header/tick.png" alt="doc1" width="20px"> Multi-super speciality hospital in South Kerala<br><br>
+    <img src="/top_header/tick.png" alt="doc1" width="20px"> Achieved the unique reputation<br><br>
+    <img src="/top_header/tick.png" alt="doc1" width="20px"> Multi-super speciality hospital in South Kerala<br><br>
+    <img src="/top_header/tick.png" alt="doc1" width="20px"> Multi-super speciality hospital in South Kerala<br><br>
+    <img src="/top_header/tick.png" alt="doc1" width="20px"> Multi-super speciality hospital in South Kerala<br><br>
+  </div>
+
+</div>
+<div class="meet">
+  <div class="meet1">
+<h2>Meet Our Specialist</h2>
+<p>We have the best doctors in GG</p>
+  </div>
+  <div class="meet_doc_img">
+    <div>
+  <img src="/top_header/meet_doc1.png" alt="doc1">
+  <h2>Lisha Powell</h2>
+  <p>ENT Specialist</p>
+    </div>
+    <div>
+  <img src="/top_header/meet_doc2.png" alt="doc1">
+  <h2>Chris NeLSON</h2>
+  <p>Cardiologist</p>
+    </div>
+    <div>
+  <img src="/top_header/meet_doc3.png" alt="doc1">
+  <h2>Linda Stapleton</h2>
+  <p>ENT Specialist</p>
+    </div>
+    <div>
+  <img src="/top_header/meet_doc4.png" alt="doc1">
+  <h2>Lisha Powell</h2>
+  <p>ENT Specialist</p>
+    </div>
+</div>
+  <button class="spec-button">View all</button>
+</div>
+<div id="fac">
+  <h2>Facilities & Activities</h2>
+</div>
+<div class="facilities">
+  <img class="fac-img" src="/top_header/fac_1.png" alt="doc1">
+  <img class="fac-img" src="/top_header/fac_2.png" alt="doc1" >
+  <img class="fac-img" src="/top_header/fac3.png" alt="doc1" >
+</div>
+
+<div>
+  <h2 id="you">You may be interested</h2>
+  <div class="department_inside">
+    <div class="dep_images">
+      <img src="/top_header/u1.png" alt="doc1">
+      <img src="/top_header/u2.png" alt="doc2">
+      <img src="/top_header/u3.png" alt="doc3">
+    </div>
+  
+    <div class="dept_text">
+      <div class="text1">
+        <h3>Hepatobiliary Surgery</h3>
+        <p>The Hepatobiliary and Transplantology Unit of<br>GG Hospital offers a comprehensive...<span>Read more</span></p>
       </div>
-      <div class="form-row2">
-        <select name="Department" class="box">
-          <option value="" disabled selected hidden>Department</option>
-          <option value="ENT">ENT</option>
-          <option value="General Medicine">Dermatology</option>
-          <option value="Dermatology">Dermatology</option>
-          <option value="Dentistry">Dentistry</option>
-        </select>
-        <select name="Doctor" class="box">
-          <option value="" disabled selected hidden>Doctors</option>
-          <option value="ENT">ENT</option>
-          <option value="General Medicine">Dermatology</option>
-          <option value="Dermatology">Dermatology</option>
-          <option value="Dentistry">Dentistry</option>
-        </select>
-        <button class="button">Book an appointment</button>
+      <div class="text2">
+      <h3>Hepatobiliary Surgery</h3>
+      <p>The Hepatobiliary and Transplantology Unit of<br>GG Hospital offers a comprehensive...<span>Read more</span></p>
+      </div>
+      <div class="text3">
+        <h3>Hepatobiliary Surgery</h3>
+        <p>The Hepatobiliary and Transplantology Unit of<br>GG Hospital offers a comprehensive...<span>Read more</span></p>
       </div>
     </div>
+  
+  </div>
+</div>
+<div class="int-bg">
+  <div class="sub-content">
+    <h4 class="s-content">Suscribe our <br>Newsletter Sign Up</h4>
+    <form action="" class="sub-form">
+        <input class="email" type="email" placeholder="Enter your email id" required>
+        <button class="sub-button" type="submit">Subscribe</button>
+    </form>
+    <div id="line"><hr id="hr"></div>
+  </div>
+</div>
+
+<footer id="foot">
+  <div id="up-foot">
+    <div id="up-1">
+      <img id="up-img" src="/Nav bar/image 24.png" alt="">
+      <p id="up-p">GG Hospital is the flagship hospital of the Sree <br>
+        Gokulam Group of Companies. Our journey <br>
+        started on 27th January 2016 for the common <br>
+        people in Trivandrum.</p>
+    </div>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div id="up-2">
+      <h4 id="up2-h">About GG</h4>
+      <div id="up2-grid">
+        <p class="up2-class">About us</p>
+        <p class="up2-class">Academic</p>
+        <p class="up2-class">Hospital</p>
+        <p class="up2-class">Department</p>
+      </div>
+    </div>
+    <div id="up-3">
+      <h4 id="up3-h">Legal</h4>
+      <div id="up3-grid">
+        <p class="up3-class">Privacy Policy</p>
+        <p class="up3-class">Documentation</p>
+        <p class="up3-class">Terms of Services</p>
+        <p class="up3-class">Site Map</p>
+      </div>
+    </div>
+  </div>
+  <div id="foot-line"><hr id="foot-hr"></div>
+  <div id="down-foot">
+    <div id="df-1">
+      <i class="fa fa-home"></i>
+      <p id="df1-p">Medical College, Pattom Kumarapuram Rd, <br>Murinjapalam,Thiruvananthapuram, Kerala 695011</p>
+    </div>
+    <div id="df-2">
+      <i class="fa fa-phone"></i>
+      <p id="df2-p">0471 2779100 <br>
+        0471 2779101  <br>        
+        0471 4299299</p>
+    </div>
+    <div id="df-3">
+      <i class="fa fa-envelope"></i>
+      <p id="df2-p">gghospitalphkpl@gmail.com <br>
+        mdoffice@gg-hospital.com</p>
+    </div>
+    <div id="df-4">
+      <h3 id="df4-h">We are on Social Media</h3>
+      <div id="df4-icon">
+        <p>
+          <i class="fa fa-linkedin"></i>&nbsp;
+          <i class="fa fa-youtube-play"></i>&nbsp;
+          <i class="fa fa-instagram"></i>&nbsp;
+          <i class="fa fa-facebook-f"></i>&nbsp;
+        </p>
+      </div>
+    </div>
+</footer>
+
   </body>
 </html>
